--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
 							<li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
 						</ul>
 						<!-- <a type="button" class="btn btn-primary px-5 py-2 mt-2"><span>Read More</span></a> -->
-						<button type="button" class="btn btn-primary" data-bs-toggle="modal"
-							data-bs-target="#exampleModal"><span>Enquiry Now</span></button>
+						<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"><span>Enquiry Now</span></button>
 					</div>
 				</div>
 			</div>
@@ -250,7 +249,92 @@
 						<h2 class="sub-title z-2 position-relative mb-3">The Section Sub Title For Text</h2>
 						<p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolores exercitationem harum, nesciunt esse ratione nam, fuga accusamus quos sapiente minus aliquam architecto fugit quod quaerat? Ipsam odit accusantium obcaecati!</p>
 						<p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quibusdam optio doloremque deleniti sapiente dolore eaque nesciunt vel. </p>
-						<button type="button" class="btn btn-primary px-4"><span>Contact Us</span></button>
+						<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"><span>Contact Now</span></button>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="review-area py-0 py-md-2 py-lg-5 bg-light border-bottom" id="reviewArea" data-aos="zoom-in-up">
+			<div class="container py-4 py-md-5">
+				<h1 class="title fw-bold z-2 position-relative">Client Reviews</h1>
+				<p class="z-2 position-relative">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti deleniti corporis quod placeat consequuntur fuga architecto quis voluptatem cumque exercitationem, beatae a laborum reiciendis magni. Quasi beatae voluptatum nihil sequi. </p>
+				<div class="owl-carousel owl-theme owl-gallery">
+					<div class="item p-2 p-md-3 p-lg-4 py-3 py-md-4 py-lg-5 text-center border rounded-3">
+						<img src="./images/img_1.jpg" alt="iage alt text" class="rounded-circle mx-auto mb-3">
+						<span class="d-block fw-bold text-white">Client Name</span>
+						<span class="text-white d-block mb-3">Client Designation</span>
+						<p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptates.</p>
+						<p class="d-flex align-items-center justify-content-center gap-2 mb-0"><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star active"></i></p>
+					</div>
+					<div class="item p-2 p-md-3 p-lg-4 py-3 py-md-4 py-lg-5 text-center border rounded-3">
+						<img src="./images/img_1.jpg" alt="iage alt text" class="rounded-circle mx-auto mb-3">
+						<span class="d-block fw-bold text-white">Client Name</span>
+						<span class="text-white d-block mb-3">Client Designation</span>
+						<p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptates.</p>
+						<p class="d-flex align-items-center justify-content-center gap-2 mb-0"><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star active"></i></p>
+					</div>
+					<div class="item p-2 p-md-3 p-lg-4 py-3 py-md-4 py-lg-5 text-center border rounded-3">
+						<img src="./images/img_1.jpg" alt="iage alt text" class="rounded-circle mx-auto mb-3">
+						<span class="d-block fw-bold text-white">Client Name</span>
+						<span class="text-white d-block mb-3">Client Designation</span>
+						<p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptates.</p>
+						<p class="d-flex align-items-center justify-content-center gap-2 mb-0"><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+					</div>
+					<div class="item p-2 p-md-3 p-lg-4 py-3 py-md-4 py-lg-5 text-center border rounded-3">
+						<img src="./images/img_1.jpg" alt="iage alt text" class="rounded-circle mx-auto mb-3">
+						<span class="d-block fw-bold text-white">Client Name</span>
+						<span class="text-white d-block mb-3">Client Designation</span>
+						<p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptates.</p>
+						<p class="d-flex align-items-center justify-content-center gap-2 mb-0"><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star active"></i></p>
+					</div>
+					<div class="item p-2 p-md-3 p-lg-4 py-3 py-md-4 py-lg-5 text-center border rounded-3">
+						<img src="./images/img_1.jpg" alt="iage alt text" class="rounded-circle mx-auto mb-3">
+						<span class="d-block fw-bold text-white">Client Name</span>
+						<span class="text-white d-block mb-3">Client Designation</span>
+						<p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptates.</p>
+						<p class="d-flex align-items-center justify-content-center gap-2 mb-0"><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star"></i></p>
+					</div>
+					<div class="item p-2 p-md-3 p-lg-4 py-3 py-md-4 py-lg-5 text-center border rounded-3">
+						<img src="./images/img_1.jpg" alt="iage alt text" class="rounded-circle mx-auto mb-3">
+						<span class="d-block fw-bold text-white">Client Name</span>
+						<span class="text-white d-block mb-3">Client Designation</span>
+						<p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptates.</p>
+						<p class="d-flex align-items-center justify-content-center gap-2 mb-0"><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star active"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="story-area py-0 py-md-2 py-lg-5 border-bottom" id="storyArea" data-aos="fade-up">
+			<div class="container py-4 py-md-5">
+				<h1 class="title fw-bold z-2 position-relative">Our Success Stories</h1>
+				<p class="z-2 position-relative">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti deleniti corporis quod placeat consequuntur fuga architecto quis voluptatem cumque exercitationem, beatae a laborum reiciendis magni. Quasi beatae voluptatum nihil sequi. </p>
+				<div class="row">
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="card border-0 p-3 shadow rounded-2 mb-3 mb-lg-0" data-aos="fade-up" data-aos-delay="0">
+							<img src="./images/backImage.jpg" alt="" class="rounded-2 mb-3">
+							<h3 class="fs-3 fw-bold">The blog title 1</h3>
+							<p class="fs-6 mb-2 text-muted">25th March, 2025</p>
+							<p class="text-muted mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod ab nulla aliquid corrupti veniam illum in nostrum blanditiis...</p>
+							<a href="#" class="">read more</a>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="card border-0 p-3 shadow rounded-2 mb-3 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
+							<img src="./images/backImage.jpg" alt="" class="rounded-2 mb-3">
+							<h3 class="fs-3 fw-bold">The blog title 2</h3>
+							<p class="fs-6 mb-2 text-muted">25th March, 2025</p>
+							<p class="text-muted mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod ab nulla aliquid corrupti veniam illum in nostrum blanditiis...</p>
+							<a href="#" class="">read more</a>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="card border-0 p-3 shadow rounded-2 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
+							<img src="./images/backImage.jpg" alt="" class="rounded-2 mb-3">
+							<h3 class="fs-3 fw-bold">The blog title 3</h3>
+							<p class="fs-6 mb-2 text-muted">25th March, 2025</p>
+							<p class="text-muted mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod ab nulla aliquid corrupti veniam illum in nostrum blanditiis...</p>
+							<a href="#" class="">read more</a>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -259,7 +343,28 @@
 			<div class="container py-4 py-md-5 mb-5 mb-md-2 mb-lg-0">
 				<div class="row align-items-center mb-5 mb-md-2 mb-lg-0 pb-5 pb-md-3 pb-lg-0">
 					<div class="col-12 col-lg-6" data-aos="fade-up">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29443.321294553072!2d88.35896047806888!3d22.712805418808074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89c763ea43ad5%3A0xf675d691761552bc!2sKhardaha%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1740861743574!5m2!1sen!2sin"></iframe>
+						<div class="row align-items-end">
+							<!-- <div class="col-12 col-md-4 fw-bold"><p class="d-flex align-items-center gap-2"><i class="fa-regular fa-compass"></i> Location Advantages</p></div> -->
+							<div class="col-12 col-md-12">
+								<div class="owl-carousel owl-theme owl-text">
+									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-book"></i></span>Ramkrishna Mission : 3 Mnt</p></div>
+									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-person-running"></i></span>Vivekanada Stadium : 3 Mnt</p></div>
+									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-place-of-worship"></i></span>Harisava Temple : 5 Mnt</p></div>
+									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-train"></i></span>Khardaha Station : 6 Mnt</p></div>
+									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-train"></i></span>Titagarh Station : 5 Mnt</p></div>
+									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-car"></i></span>Kalyani ExpressWay : 5 Mnt</p></div>
+									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-bus"></i></span>Rahara Busstand : 4 Mnt</p></div>
+									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-car"></i></span>B.T. Road : 10 Mnt</p></div>
+									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-handcuffs"></i></span>Police Station : 10 Mnt</p></div>
+									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-stethoscope"></i></span>Hospital : 7 Mnt</p></div>
+									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-book"></i></span>School : 3 Mnt</p></div>
+									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-plane-departure"></i></span>Airport : 20 Mnt</p></div>
+								</div>
+							</div>
+						</div>
+						<div class="">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29443.321294553072!2d88.35896047806888!3d22.712805418808074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89c763ea43ad5%3A0xf675d691761552bc!2sKhardaha%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1740861743574!5m2!1sen!2sin"></iframe>
+						</div>
 					</div>
 					<div class="col-12 col-lg-6 mt-3 mt-lg-0" data-aos="fade-down">
 						<h1 class="title fw-bold z-2">Have a Questions?</h1>
@@ -319,9 +424,9 @@
 					<div class="col-12 col-md-12 col-lg-7 col-xl-7 text-end">
 						<p class="text-white text-center text-lg-end fs-3 fw-bold mb-3">Connect with us</p>
 						<p class="fw-bold social d-flex align-items-center justify-content-center justify-content-lg-end">
-							<a href="#" class="ms-2"><i class="fa-brands fa-facebook-f"></i></a>
-							<a href="#" class="ms-2"><i class="fa-brands fa-instagram"></i></a>
 							<a href="#" class="ms-2"><i class="fa-brands fa-whatsapp"></i></a>
+							<a href="#" class="ms-2"><i class="fa-brands fa-instagram"></i></a>
+							<a href="#" class="ms-2"><i class="fa-brands fa-facebook-f"></i></a>
 							<a href="#" class="ms-2"><i class="fa-brands fa-youtube"></i></a>
 							<a href="#" class="ms-2"><i class="fa-brands fa-google"></i></a>
 						</p>
@@ -330,7 +435,7 @@
 							<li class="px-2 border-0"><a href="#">About Us</a></li>
 							<li class="px-2 border-0"><a href="#">Highlights</a></li>
 							<li class="px-2 border-0"><a href="#">Amenities</a></li>
-							<li class="px-2 border-0"><a href="#">Price</a></li>
+							<li class="px-2 border-0"><a href="#">Price Plans</a></li>
 							<li class="px-2 border-0"><a href="#">Gallery</a></li>
 							<li class="px-2 pe-lg-0 border-0"><a href="#">Contact Us</a></li>
 						</ul>
