--- a/index.html
+++ b/index.html
@@ -341,27 +341,27 @@
 		</section>
 		<section class="contact-area py-0 py-md-2 py-lg-5" id="contactArea">
 			<div class="container py-4 py-md-5 mb-5 mb-md-2 mb-lg-0">
+				<div class="row align-items-end">
+					<!-- <div class="col-12 col-md-4 fw-bold"><p class="d-flex align-items-center gap-2"><i class="fa-regular fa-compass"></i> Location Advantages</p></div> -->
+					<div class="col-12 col-lg-6 location-advantages">
+						<div class="owl-carousel owl-theme owl-text">
+							<div class="item"><p class="fw-bold d-flex gap-1 align-items-center justify-content-start"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-book"></i></span>Ramkrishna Mission : 3 Minutes</p></div>
+							<div class="item"><p class="fw-bold d-flex gap-1 align-items-center justify-content-start"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-person-running"></i></span>Vivekanada Stadium : 3 Minutes</p></div>
+							<div class="item"><p class="fw-bold d-flex gap-1 align-items-center justify-content-start"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-place-of-worship"></i></span>Harisava Temple : 5 Minutes</p></div>
+							<div class="item"><p class="fw-bold d-flex gap-1 align-items-center justify-content-start"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-train"></i></span>Khardaha Station : 6 Minutes</p></div>
+							<div class="item"><p class="fw-bold d-flex gap-1 align-items-center justify-content-start"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-train"></i></span>Titagarh Station : 5 Minutes</p></div>
+							<div class="item"><p class="fw-bold d-flex gap-1 align-items-center justify-content-start"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-car"></i></span>Kalyani ExpressWay : 5 Minutes</p></div>
+							<div class="item"><p class="fw-bold d-flex gap-1 align-items-center justify-content-start"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-bus"></i></span>Rahara Bus Stand : 4 Minutes</p></div>
+							<div class="item"><p class="fw-bold d-flex gap-1 align-items-center justify-content-start"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-car"></i></span>B.T. Road : 10 Minutes</p></div>
+							<div class="item"><p class="fw-bold d-flex gap-1 align-items-center justify-content-start"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-handcuffs"></i></span>Police Station : 10 Minutes</p></div>
+							<div class="item"><p class="fw-bold d-flex gap-1 align-items-center justify-content-start"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-stethoscope"></i></span>Hospital : 7 Minutes</p></div>
+							<div class="item"><p class="fw-bold d-flex gap-1 align-items-center justify-content-start"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-book"></i></span>School : 3 Minutes</p></div>
+							<div class="item"><p class="fw-bold d-flex gap-1 align-items-center justify-content-start"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-plane-departure"></i></span>Airport : 20 Minutes</p></div>
+						</div>
+					</div>
+				</div>
 				<div class="row align-items-center mb-5 mb-md-2 mb-lg-0 pb-5 pb-md-3 pb-lg-0">
 					<div class="col-12 col-lg-6" data-aos="fade-up">
-						<div class="row align-items-end">
-							<!-- <div class="col-12 col-md-4 fw-bold"><p class="d-flex align-items-center gap-2"><i class="fa-regular fa-compass"></i> Location Advantages</p></div> -->
-							<div class="col-12 col-md-12">
-								<div class="owl-carousel owl-theme owl-text">
-									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-book"></i></span>Ramkrishna Mission : 3 Mnt</p></div>
-									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-person-running"></i></span>Vivekanada Stadium : 3 Mnt</p></div>
-									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-place-of-worship"></i></span>Harisava Temple : 5 Mnt</p></div>
-									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-train"></i></span>Khardaha Station : 6 Mnt</p></div>
-									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-train"></i></span>Titagarh Station : 5 Mnt</p></div>
-									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-car"></i></span>Kalyani ExpressWay : 5 Mnt</p></div>
-									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-bus"></i></span>Rahara Busstand : 4 Mnt</p></div>
-									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-car"></i></span>B.T. Road : 10 Mnt</p></div>
-									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-handcuffs"></i></span>Police Station : 10 Mnt</p></div>
-									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-stethoscope"></i></span>Hospital : 7 Mnt</p></div>
-									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-book"></i></span>School : 3 Mnt</p></div>
-									<div class="item"><p class="fw-bold d-flex gap-1 align-items-center"><span class="d-grid rounded-circle me-2"><i class="fa-solid fa-plane-departure"></i></span>Airport : 20 Mnt</p></div>
-								</div>
-							</div>
-						</div>
 						<div class="">
 							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29443.321294553072!2d88.35896047806888!3d22.712805418808074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89c763ea43ad5%3A0xf675d691761552bc!2sKhardaha%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1740861743574!5m2!1sen!2sin"></iframe>
 						</div>
